--- a/ToDo/ToDo_1/ToDo_1.html
+++ b/ToDo/ToDo_1/ToDo_1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-do List</title>
+    <link rel="stylesheet" href="ToDo_1.css">
 </head>
 <body>
     <h1>Cosas por hacer</h1>
@@ -11,6 +12,7 @@
     <input type="text" id="nuevaTarea" placeholder="Nueva tarea">
     <button onclick="agregarTarea()">Agregar</button>
 
+    <!-- Contenedor de las tareas -->
     <div id="lista"></div>
 
     <script src="script.js"></script>
