--- a/ToDo/ToDo_2/ToDo_2.html
+++ b/ToDo/ToDo_2/ToDo_2.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TO-DO List</title>
+  <link rel="stylesheet" href="ToDo_2.css">
 </head>
 <body>
   <h1>TO-DO List</h1>
