ahora enlazado con js

--- a/ToDo/ToDo_2/ToDo_2.html
+++ b/ToDo/ToDo_2/ToDo_2.html
@@ -8,4 +8,14 @@
 </head>
 <body>
   <h1>TO-DO List</h1>
-  <button onclick="descargar()">Descargar</
+
+  <!-- Botón para descargar las tareas desde la API -->
+  <button onclick="descargar()">Descargar</button>
+
+  <!-- Aquí se mostrarán las 10 primeras tareas -->
+  <ul id="lista"></ul>
+
+  <script src="ToDo_2.js"></script>
+</body>
+</html>
+
