--- a/ToDo/ToDo_1/ToDo_1.html
+++ b/ToDo/ToDo_1/ToDo_1.html
@@ -15,6 +15,6 @@
     <!-- Contenedor de las tareas -->
     <div id="lista"></div>
 
-    <script src="script.js"></script>
+    <script src="ToDo_1.js"></script>
 </body>
 </html>
